@@ -1,3 +1,7 @@
+2008-05-10  Piotr Fusik  <fox@scene.pl>
+* Makefile.in, xbmc/xbmc_asap.c, INSTALL: Linux XBMC plugin
+
+
 2008-05-07  Piotr Fusik  <fox@scene.pl>
 * apokeysnd.c, asap.c, asap_internal.h, win32/gui.rc, win32/Makefile:
   POKEY sound emulator DLL for RMT
